Making cosmetic changes to Homepage and splitting homepage and NFtcreator to different routes

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   height: 100vh;
   text-align: center;
-  background-color: #282c34;
+  /* background-color: #282c34; */
+  background-color: black;
   color: white;
 
 }
