--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -1,5 +1,34 @@
-.header-row {
-    margin-right: 0px;
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+
+.homepage-row {
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    left: 0px;
+}
+
+.intro-column {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.Heading {
+    font-family: 'Shadows Into Light', cursive;
+    letter-spacing: 5px;
+    font-size: 80px;
+}
+
+.description {
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 32px;
+}
+
+.redirect-button {
+    width: 720px;
 }
 
 .uploadedImage {
