--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -1,5 +1,7 @@
 .navbar {
     height: 100px;
+    background-color: rgb(0, 0, 0) !important;
+    box-shadow: 10px 4px 600px 2px white;
 }
 
 .navbar-text {
